--- a/src/index.css
+++ b/src/index.css
@@ -22,12 +22,12 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+*/
 #root {
   display: flex;
   flex-direction: column;
   min-height: 100dvh;
-} */
+} 
 :root {
 	/* FUENTES */
 	--fuente-principal: "Lato", sans-serif;
@@ -137,10 +137,10 @@ input:focus {
 
 /*---------------------- termina estilos generales ----------------------- */
 
-.main-container {
+/* .main-container {
   display: flex;
   flex-direction: column;
   flex: 1;
   max-width: 1280px;  
   margin: 0 auto;
-}
+} */
