--- a/src/layout/order-sidebar/OrderSidebar.css
+++ b/src/layout/order-sidebar/OrderSidebar.css
@@ -21,7 +21,7 @@
     flex-direction: column;
     gap: 1rem;
     padding: 1rem;
-    padding-top: 3rem;
+    padding-top: 5rem;
 
     h2 {
       color: #666;
@@ -34,13 +34,22 @@
       margin: 0;
 
       .order-item {
-        display: flex;
+
+        display: grid;
+        grid-template-columns: 36px 1fr 50px 50px 50px 16px;
         align-items: center;
         font-size: .75rem;
         padding: .25rem;
+        gap: .5rem;
+
+        .order-item-name {
+          display: -webkit-box;
+          -webkit-line-clamp: 2;
+          -webkit-box-orient: vertical;
+          overflow: hidden;
+        }
 
         .order-image {
-
           width: 36px;
           height: 36px;
           object-fit: cover;
@@ -48,11 +57,23 @@
           margin-right: .75rem;
         }
 
-        .order-price {
-          
+        .order-price,
+        .order-subtotal {
+          font-size: .85rem;
+          color: #333;
+          width: 50px;
+
+        }
+
+        .order-quantity-input {
+          width: 50px;
+          padding: .25rem;
+          text-align: center;
+
         }
 
         .order-quantity {
+
           margin-left: auto;
           display: flex;
           gap: .75rem;
@@ -60,7 +81,17 @@
           font-weight: bold;
           font-size: 1rem;
 
-          .order-delete-item {
+
+        }
+
+        .order-action {
+
+          .fa-trash-can {
+            cursor: pointer;
+            color: red;
+          }
+
+          /* .order-delete-item {
             cursor: pointer;
             background-color: red;
             color: white;
@@ -70,7 +101,7 @@
             align-items: center;
             padding: .5rem .375rem;
             border-radius: 3px;
-          }
+          } */
         }
 
 
