--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   --primary-color: rgba(255, 255, 255, 0.87);
   --secondary-color: royalblue;
   --tercery-color: #242424;
@@ -22,12 +22,127 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+*/
 #root {
   display: flex;
   flex-direction: column;
   min-height: 100dvh;
+} 
+:root {
+	/* FUENTES */
+	--fuente-principal: "Lato", sans-serif;
+	--fuente-secundaria: "Roboto", sans-serif;
+	/* COLORES */
+	--color-p-claro: #999;
+	--color-p-oscuro: #666;
+	--color-rosa: #c87065;
+	--color-beige: #c8a165;
+	--color-blanco: #ffffff;
+	--color-gris-bg: #f6f6f6;
+	--color-gris-bg-footer: #EEEEEE;
+	--color-transparencia: #6666667d;
+	/* SOMBRAS */
+	--box-shadow: 1px 8px 15px rgba(0, 0, 0, 0.12);
 }
+
+/*  ?==================== #ESTILOS GENERALES ====================  */
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+body {
+	min-height: 100dvh;
+	display: flex;
+	flex-direction: column;
+	font-family: var(--fuente-principal);
+	color: var(--color-p-claro);
+	background-color: var(--color-gris-bg);
+	position: relative;
+}
+
+p {
+	font-size: 14px;
+	color: var(--color-p-claro);
+}
+
+/* ---------- ENCABEZADOS ---------- */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-family: var(--fuente-principal);
+	font-weight: 900;
+	color: var(--color-p-oscuro);
+	text-transform: uppercase;
+}
+
+h1 {
+	font-size: 24px;
+}
+
+h2 {
+	font-size: 22px;
+	font-weight: 900;
+}
+
+h3 {
+	font-size: 18px;
+}
+
+/* ---------- LINKS ---------- */
+a {
+	text-decoration: none;
+}
+
+/* ---------- LISTAS ---------- */
+ul li {
+	list-style: none;
+}
+
+/* ---------- BOTONES ---------- */
+.btn-principal {
+	background-color: var(--color-rosa);
+	color: var(--color-blanco);
+	text-transform: uppercase;
+	padding: 0.6rem 2rem;
+	margin: 0.5rem 0;
+	border: 0;
+	border-radius: 3px;
+}
+
+.btn-principal:hover {
+	background-color: var(--color-beige);
+}
+
+/* ---------- INPUT ---------- */
+.input-group {
+	display: flex;
+	flex-direction: column;
+}
+input,
+select {
+	width: 100%;
+	padding: .5rem .5rem;
+	margin: .2rem 0;
+	border: none;
+	border-bottom: 3px solid var(--color-rosa);
+}
+
+input:focus {
+	outline: none;
+}
+ 
+.input-error {
+	font-size: 10px;
+	color: red
+}
+
+/*---------------------- termina estilos generales ----------------------- */
 
 .main-container {
   display: flex;
@@ -35,4 +150,127 @@
   flex: 1;
   max-width: 1280px;  
   margin: 0 auto;
+}
+
+/* --------------------- ESTILOS ADMIN PRODUCT --------------------- */
+.admin-container {
+
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 2rem;
+	margin: 3rem 1rem;
+}
+
+.admin-form {
+	max-width: 300px;
+	
+
+	form {
+		display: flex;
+		flex-direction: column;
+		gap: .3rem;
+
+		h2 {
+			padding-bottom: .8rem;
+		}
+	}
+
+}
+
+.container-table {
+	max-width: 1080px;
+	width: 100vw;
+
+}
+.main-admin-product {
+	background-color: var(--color-blanco);
+	padding: 2rem;
+
+	text-align: center;
+	overflow: hidden;
+	
+}
+
+.table-container {
+	overflow-x: scroll;
+}
+
+.tb-product {
+	width: 100%;
+	margin: 2rem auto;
+	border-collapse: collapse;
+	max-width: 900px;
+
+	th {
+		padding: .75rem;
+		color: var(--color-p-oscuro);
+		background-color: var(--color-gris-bg);
+		border: 2px solid var(--color-blanco);
+		text-transform: uppercase;
+	}
+
+	td {
+		color: var(--color-p-claro);
+		font-weight: 500;
+		border-bottom: 2px solid var(--color-gris-bg-footer);
+		padding: .5rem;
+	}
+
+	.td-image {
+		text-align: center;
+
+		.img-table {
+			width: 60px;
+			height: 60px;
+			object-fit: cover;
+		}
+	}
+
+	.td-description {
+		text-align: start;
+	}
+
+	.td-price {
+		text-align: center;
+	}
+
+	.td-action {
+		text-align: center;
+
+		button {
+			background-color: transparent;
+			border: none;
+
+			&:hover {
+				cursor: pointer;
+			}
+			i {
+				font-size: 1.2rem;
+				margin: .2rem;
+			}
+		}
+
+		.bt-edit {
+			color: blue;
+		}
+
+		.bt-remove {
+			color: red;
+		}
+	}
+}
+
+/*  !==================== #MEDIAS QUERY ====================  */
+
+@media screen and (width > 992px) {
+	
+	/* ?==================== #PAGE LISTA DE PRODUCT pantallas grandes ====================  */
+
+	.container-table {
+		width: 980px;
+	}
+	.tb-product td {
+		font-size: 14px;
+	}
 }
