Product detail carga producto seleccionado

--- a/src/components/banner/Banner.css
+++ b/src/components/banner/Banner.css
@@ -40,21 +40,21 @@
 }
 
 .banner-about {
-	background-image: url(/assets/images/banner-page-1.jpg);
+	background-image: url(https://trabajo-integrador-bootcamp.netlify.app/assets/images/banner-page-1.jpg);
 }
 
 .banner-contact {
-	background-image: url(/assets/images/banner-page-2.jpg);
+	background-image: url(https://trabajo-integrador-bootcamp.netlify.app/assets/images/banner-page-2.jpg);
 }
 
 .banner-list-products {
-	background-image: url(/assets/images/banner-page-3.jpg);
+	background-image: url(https://trabajo-integrador-bootcamp.netlify.app/assets/images/banner-page-3.jpg);
 }
 
 .banner-registro {
-	background-image: url(/assets/images/banner-page-4.jpg);
+	background-image: url(https://trabajo-integrador-bootcamp.netlify.app/assets/images/banner-page-4.jpg);
 }
 
 .banner-single-product {
-	background-image: url(/assets/images/banner-page-5.jpg);
+	background-image: url(https://trabajo-integrador-bootcamp.netlify.app/assets/images/banner-page-5.jpg);
 }
