--- a/src/layout/heder/Header.css
+++ b/src/layout/heder/Header.css
@@ -122,10 +122,33 @@
   }
 }
 
-.cart-icon {
+.user-cart-container {
   font-size: 1.2rem;
   color: var(--color-p-oscuro);
   margin-left: 1rem;
+
+  position: relative;
+
+  &.show-circle {
+
+    &::before {
+      content: attr(data-count);
+      font-size: .6rem;
+      position: absolute;
+      top: -10px;
+      right: -10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: red;
+      color: white;
+      border-radius: 50%;
+      padding: .2rem;
+      width: 10px;
+      height: 10px;
+    }
+  }
+
 }
 
 @media screen and (width > 992px) {
