--- a/src/index.css
+++ b/src/index.css
@@ -24,10 +24,11 @@
 }
 */
 #root {
-  display: flex;
-  flex-direction: column;
-  min-height: 100dvh;
-} 
+	display: flex;
+	flex-direction: column;
+	min-height: 100dvh;
+}
+
 :root {
 	/* FUENTES */
 	--fuente-principal: "Lato", sans-serif;
@@ -59,7 +60,7 @@ body {
 	flex-direction: column;
 	font-family: var(--fuente-principal);
 	color: var(--color-p-claro);
-	background-color: var(--color-gris-bg);
+	/* background-color: var(--color-gris-bg); */
 	position: relative;
 }
 
@@ -124,9 +125,10 @@ ul li {
 	display: flex;
 	flex-direction: column;
 }
+
 input,
 select {
-	width: 100%;
+	/* width: 100%; */
 	padding: .5rem .5rem;
 	margin: .2rem 0;
 	border: none;
@@ -136,7 +138,7 @@ select {
 input:focus {
 	outline: none;
 }
- 
+
 .input-error {
 	font-size: 10px;
 	color: red
@@ -145,14 +147,16 @@ input:focus {
 /*---------------------- termina estilos generales ----------------------- */
 
 .main-container {
-  display: flex;
-  flex-direction: column;
-  flex: 1;
-  max-width: 1280px;  
-  margin: 0 auto;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	flex: 1 !important;
+	/* max-width: 1280px; */
+	margin: 0 auto;
 }
 
 /* --------------------- ESTILOS ADMIN PRODUCT --------------------- */
+
 .admin-container {
 
 	display: flex;
@@ -160,16 +164,17 @@ input:focus {
 	align-items: center;
 	gap: 2rem;
 	margin: 3rem 1rem;
+
 }
 
 .admin-form {
 	max-width: 300px;
-	
 
 	form {
 		display: flex;
 		flex-direction: column;
 		gap: .3rem;
+		margin: 2rem;
 
 		h2 {
 			padding-bottom: .8rem;
@@ -183,16 +188,19 @@ input:focus {
 	width: 100vw;
 
 }
+
 .main-admin-product {
 	background-color: var(--color-blanco);
 	padding: 2rem;
-
+	width: 980px;
 	text-align: center;
 	overflow: hidden;
-	
+	background-color: #c87065;
+
 }
 
 .table-container {
+	width: 100%;
 	overflow-x: scroll;
 }
 
@@ -245,6 +253,7 @@ input:focus {
 			&:hover {
 				cursor: pointer;
 			}
+
 			i {
 				font-size: 1.2rem;
 				margin: .2rem;
@@ -264,13 +273,45 @@ input:focus {
 /*  !==================== #MEDIAS QUERY ====================  */
 
 @media screen and (width > 992px) {
-	
+
 	/* ?==================== #PAGE LISTA DE PRODUCT pantallas grandes ====================  */
 
-	.container-table {
-		width: 980px;
+	.main-container {
+		/* display: flex;
+		flex-direction: column;
+		flex-grow: 1; */
 	}
+
+	.container-table {
+		width: 900px;
+	}
+
 	.tb-product td {
 		font-size: 14px;
+	}
+
+	.main-admin {
+		display: flex;
+	}
+
+	/*  ?==================== #PAGINA ABOUT pantallas grandes====================  */
+	.container-about {
+
+		.main-about {
+			flex-direction: row;
+			max-width: 1280px;
+			position: relative;
+
+			.img-about {
+				width: 700px;
+			}
+			.text-about {
+				width: 650px;
+				position: absolute;
+				right: 1rem;
+				bottom: 50%;
+				transform: translatey(50%);
+			}
+		}
 	}
 }
