--- a/src/layout/heder/Header.css
+++ b/src/layout/heder/Header.css
@@ -1,26 +1,3 @@
-/* header {
-  background-color: royalblue;
-
-  .header-nav {
-    display: flex;
-
-    .nav-link {
-      padding: 1rem;
-      text-decoration: none;
-      color: var(--primary-color);
-
-      &:hover {
-        background-color: rgb(47,83,191);
-      }
-
-      &.active {
-        color: white;
-        text-shadow: 0 0 2px white;
-      }
-    }
-  }
-} */
-
 .main-header {
   height: 60px;
   position: sticky;
@@ -43,7 +20,7 @@
   align-items: center;
   flex-wrap: wrap;
   position: relative;
-  padding: 0 1rem;
+  padding: 0 1rem !important;
 }
 
 .logo {
@@ -111,6 +88,10 @@
   }
 }
 
+.nav-item.active {
+  color: var(--color-rosa);
+}
+
 .user-data {
   display: flex;
   flex-direction: column;
@@ -135,8 +116,8 @@
       content: attr(data-count);
       font-size: .6rem;
       position: absolute;
-      top: -10px;
-      right: -10px;
+      top: -5px;
+      right: -5px;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -144,8 +125,8 @@
       color: white;
       border-radius: 50%;
       padding: .2rem;
-      width: 10px;
-      height: 10px;
+      width: 15px;
+      height: 15px;
     }
   }
 
@@ -201,3 +182,4 @@
       }
     }
   }
+}
