--- a/src/pages/about-us/AboutUs.css
+++ b/src/pages/about-us/AboutUs.css
@@ -1,3 +1,6 @@
+.hola {
+	background-color:var(--color-gris-bg);
+}
 .container-about {
 	background-color: var(--color-gris-bg);
 
@@ -110,10 +113,10 @@
 			position: relative;
 
 			.img-about {
-				width: 700px;
+				width: 750px;
 			}
 			.text-about {
-				width: 650px;
+				width: 780px;
 				position: absolute;
 				right: 1rem;
 				bottom: 50%;
