--- a/src/index.css
+++ b/src/index.css
@@ -1,28 +1,3 @@
-/* :root {
-  --primary-color: rgba(255, 255, 255, 0.87);
-  --secondary-color: royalblue;
-  --tercery-color: #242424;
-  
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  background-color: var(--primary-color);
-  color: var(--tercery-color);
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-*/
 #root {
 	display: flex;
 	flex-direction: column;
@@ -47,7 +22,6 @@
 }
 
 /*  ?==================== #ESTILOS GENERALES ====================  */
-
 * {
 	margin: 0;
 	padding: 0;
@@ -60,7 +34,6 @@ body {
 	flex-direction: column;
 	font-family: var(--fuente-principal);
 	color: var(--color-p-claro);
-	/* background-color: var(--color-gris-bg); */
 	position: relative;
 }
 
@@ -119,9 +92,13 @@ ul li {
 .btn-principal:hover {
 	background-color: var(--color-beige);
 }
+
 /* ---------- FORMULARIO ---------- */
 form {
 	font-size: 14px;
+	background-color: var(--color-blanco);
+	padding: 2rem;
+
 	input {
 		background-color: var(--color-gris-bg);
 	}
@@ -150,6 +127,7 @@ input:focus {
 	font-size: 10px;
 	color: red
 }
+
 textarea {
 	width: 100%;
 	margin-top: .3rem;
@@ -160,63 +138,61 @@ textarea {
 }
 
 /*---------------------- termina estilos generales ----------------------- */
-
 .main-container {
 	width: 100%;
 	display: flex;
 	flex-direction: column;
 	flex: 1 !important;
-	/* max-width: 1280px; */
+	background-color: var(--color-gris-bg);
 	margin: 0 auto;
+}
+.page-container {
+	margin: 0 auto;
+	padding: 3rem 0;
+}
 
-	.container {
-		padding: 3rem 0;
-		
-	}
+/* --------------------- ESTILOS ABOUT US --------------------- */
+.container-about {
+	width: 100% !important;
+	background-color: var(--color-gris-bg);
 }
 
 /* --------------------- ESTILOS ADMIN PRODUCT --------------------- */
-
-.admin-container {
-
+.main-admin {
+	width: 90%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	gap: 2rem;
-	margin: 3rem 1rem;
-
+	margin: 2rem auto;
 }
 
 .admin-form {
-	max-width: 300px;
+	width: 100%;
 
 	form {
 		display: flex;
 		flex-direction: column;
 		gap: .3rem;
-		margin: 2rem;
+		/* margin: 1.5rem; */
 
 		h2 {
 			padding-bottom: .8rem;
 		}
 	}
-
 }
 
 .container-table {
 	max-width: 1080px;
 	width: 100vw;
-
 }
 
 .main-admin-product {
 	background-color: var(--color-blanco);
-	padding: 2rem;
-	width: 980px;
+	padding: 2rem 1rem;
+	width: 100%;
 	text-align: center;
 	overflow: hidden;
-
-
 }
 
 .table-container {
@@ -265,7 +241,6 @@ textarea {
 
 	.td-action {
 		text-align: center;
-		
 
 		button {
 			font-size: 1rem;
@@ -290,31 +265,54 @@ textarea {
 }
 
 /* --------------------- ESTILOS LOGIN y register--------------------- */
-.login-container,
-.register-container {
-	margin: 3rem 0;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
 .form-login,
 .form-register {
 	width: 400px;
-	max-width: 400px;
+	max-width: 90%;
+	margin: 0 auto;
 }
 
 /*  !==================== #MEDIAS QUERY ====================  */
+@media screen and (width > 1040px) {
+	
+	.main-container {
+		
+		align-items: center;
+	}
 
-@media screen and (width > 992px) {
-/* ---------- FORMULARIO ---------- */
-.form-contact {
-	flex-direction: column;
-	flex-grow: 1;
-}
+	.page-container {
+		width: 100%;
+		max-width: 1280px;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
+
+	/* ---------- FORMULARIO ---------- */
+	.form-contact {
+		flex-direction: column;
+		flex-grow: 1;
+	}
+
+	/* -------FORMULARIO LOGIN Y REGISTRO-------- */
+	.form-login,
+	.form-register {
+		width: 400px;
+	}
+
+	/* -----------pagina contact--------------- */
+	.main-contact {
+		max-width: 980px;
+	}
+
+	/* -----------pagina about--------------- */
+	.main-login {
+		display: flex;
+		justify-content: center;
+	}
+
 	/* ?==================== #PAGE LISTA DE PRODUCT pantallas grandes ====================  */
-
-
-
 	.container-table {
 		width: 900px;
 	}
@@ -324,8 +322,10 @@ textarea {
 	}
 
 	.main-admin {
-		display: flex;
+		flex-direction: row;
+		align-items: flex-start;
 	}
-	
-
+	.admin-form {
+		width: 400px;
+	}
 }
