--- a/src/pages/about-us/AboutUs.css
+++ b/src/pages/about-us/AboutUs.css
@@ -1,6 +1,3 @@
-.hola {
-	background-color:var(--color-gris-bg);
-}
 .container-about {
 	background-color: var(--color-gris-bg);
 
@@ -9,8 +6,8 @@
 		display: flex;
 		flex-direction: column;
 		width: 90%;
-		margin: 2rem auto;
-		padding: 1rem;
+		margin: 0 auto;
+		padding: 2rem;
 		background-color: var(--color-blanco);
 
 		.img-about {
@@ -43,26 +40,24 @@
 		text-align: center;
 		margin: 1rem;
 	}
-
-	
 }
 
-/* sTILOS SECTION INFORME */
 .main-informe {
 	display: flex;
 	flex-direction: column;
+	justify-content: center;
 	gap: 2rem;
-	width: 90%;
-	margin: 0 auto;
 
 	article {
 
 		* {
 			margin: .5rem 0;
 		}
+
 		h4 {
 			margin-top: 1.5rem;
 		}
+
 		ol {
 			padding-left: 2rem;
 
@@ -73,9 +68,11 @@
 	}
 
 	.informe {
+		width: 90%;
 		flex: 2;
 		background-color: var(--color-blanco);
 		padding: 2rem;
+
 	}
 
 	.main-alumno {
@@ -98,27 +95,26 @@
 				border-radius: 100px;
 			}
 		}
-
 	}
 }
 
 @media screen and (width > 992px) {
-	
+
 	/*  ?==================== #PAGINA ABOUT pantallas grandes====================  */
 	.container-about {
 
 		.main-about {
-			flex-direction: row;
-			max-width: 1280px;
+			width: 1280px;
 			position: relative;
 
 			.img-about {
 				width: 750px;
 			}
+
 			.text-about {
 				width: 780px;
 				position: absolute;
-				right: 1rem;
+				right: 2rem;
 				bottom: 50%;
 				transform: translatey(50%);
 			}
